--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,5 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: checkout repo
+      run: actions/checkout@v2
     - name: make
-      run: make
+      run: make re
